--- a/index.html
+++ b/index.html
@@ -127,6 +127,81 @@
         <p class="app-desc">
             Приложение «Шланги» предназначено для ведения электронного каталога садовых и поливочных шлангов. Оно позволяет удобно хранить подробную информацию о каждом шланге, включая длину, ширину, материал, гибкость, диаметр, вес, цвет, цену и количество. В приложении реализованы функции фильтрации, сортировки и редактирования данных, а также импорт и экспорт в формате Excel для удобного обмена информацией.
         </p>
+        <a href="https://disk.yandex.ru/d/edGtBTtFF73WbA" target="_blank" class="app-btn">Скачать приложение «Шланги»</a>
+    </section>
+
+    <!-- Секция Выбор шлангов -->
+    <section id="vybor-shlangov">
+        <h2>Выбор шлангов</h2>
+        <p class="app-desc">
+            «Выбор шлангов» — это помощник для подбора оптимального шланга под конкретные задачи. Приложение анализирует параметры и требования пользователя и предлагает подходящие варианты из каталога. Оно помогает быстро ориентироваться в ассортименте, учитывая характеристики и условия эксплуатации, что облегчает правильный выбор и экономит время.
+        </p>
+        <a href="https://disk.yandex.ru/d/OmIN-L8r40QZqQ" target="_blank" class="app-btn">Скачать мобильное приложение «Выбор шлангов»</a>
+    </section>
+
+    <!-- Футер -->
+    <footer>
+        Разработчик: Ефименко Даниил &bull; Email: Falltyl800@gmail.com &bull; 2025<br />
+        Современный дизайн и удобный интерфейс для эффективной работы с каталогом шлангов.
+    </footer>
+</body>
+</html>
+
+            border: none;
+            border-radius: 8px;
+            font-size: 1.1em;
+            font-weight: bold;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 0.2s, box-shadow 0.2s;
+            box-shadow: 0 2px 8px rgba(76,175,80,0.12);
+        }
+        .app-btn:hover, .app-btn:focus {
+            background: var(--dark-green);
+            color: #fff;
+            box-shadow: 0 4px 16px rgba(56,142,60,0.16);
+        }
+        footer {
+            background: var(--footer-bg);
+            color: var(--footer-text);
+            text-align: center;
+            padding: 24px 8px 14px 8px;
+            font-size: 1.1em;
+            letter-spacing: 1px;
+            margin-top: 60px;
+        }
+        @media (max-width: 600px) {
+            section {
+                margin: 24px 6px;
+                padding: 18px 6px;
+            }
+            header h1 {
+                font-size: 1.5em;
+            }
+            .app-btn {
+                width: 100%;
+                padding: 12px 0;
+                font-size: 1em;
+            }
+        }
+    </style>
+</head>
+<body>
+    <!-- Шапка -->
+    <header>
+        <h1>Приложения для работы со шлангами</h1>
+        <nav>
+            <a href="#shlangi">Шланги</a>
+            <a href="#vybor-shlangov">Выбор шлангов</a>
+        </nav>
+    </header>
+
+    <!-- Секция Шланги -->
+    <section id="shlangi">
+        <h2>Шланги</h2>
+        <p class="app-desc">
+            Приложение «Шланги» предназначено для ведения электронного каталога садовых и поливочных шлангов. Оно позволяет удобно хранить подробную информацию о каждом шланге, включая длину, ширину, материал, гибкость, диаметр, вес, цвет, цену и количество. В приложении реализованы функции фильтрации, сортировки и редактирования данных, а также импорт и экспорт в формате Excel для удобного обмена информацией.
+        </p>
         <a href="https://disk.yandex.ru/d/edGtBTtFF73WbA" target="_blank" class="app-btn">Открыть приложение «Шланги»</a>
     </section>
 
